--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 Title: Sima Ramin
 logo: /Users/simaramin/Downloads/Photos/Sima.jpg
 sima_doanloads: true
-theme: jekyll-theme-minimal-0.2.0
+theme: jekyll-theme-minima
