--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Sima Ramin"
 description: "Resume"
-logo: /Users/simaramin/Downloads/Photos/Sima.jpg
+logo: /assets/img/Sima.jpg
 sima_downloads: true
 theme: jekyll-theme-minimal
 plugins:
