--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,8 @@ theme: jekyll-theme-minimal
 plugins:
   - jekyll-seo-tag
   - jekyll-paginate
+---
+layout: page
+title: "Courses"
+permalink: /courses/
+---
